# opencv_cli_cpp

./: .gitignore  CMakeLists.txt  README.md
source/: arg_parser.cpp  brightener.cpp  dilater.cpp  eroder.cpp  img_container.cpp  loader.cpp  main.cpp  open_image.cpp  process.cpp  reloader.cpp  saver.cpp  show_img.cpp  smoother.cpp  thresholder.cpp  transform.cpp
source/include/: arg_parser.h  brightener.h  dilater.h  eroder.h  img_container.h  loader.h  open_image.h  process.h  reloader.h  saver.h  show_img.h  smoother.h  thresholder.h  transform.h
